# pytest-api-contract

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: petstore.yaml  test_petstore.py
src/pytest_api_contract/: __init__.py  plugin.py  spec_loader.py  test_generator.py
tests/: test_plugin.py  test_spec_loader.py  test_test_generator.py  test_v020.py  test_v030.py
tests/fixtures/: test_api.txt  test_api.yaml
